# gn-dist

./: .gitignore  MANIFEST.in  README.md  build_gn.py  pyproject.toml  setup.py  zizmor.yml
.github/workflows/: build.yaml  build_one.yaml
LICENSES/: BSD-3-Clause.txt
src/gn_dist/: __init__.py  __main__.py
utils/: get_version.py  install-static-clang.sh  test.py
