# SPDX-FileCopyrightText: 2026 geisserml <geisserml@gmail.com>
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "gn-dist"
version = "2407.1"  # gn version + .nth_rebuild
description = "Binary distributions of GN (generate-ninja) for Linux."
readme = "README.md"
authors = [{ name = "pypdfium2-team", email = "geisserml@gmail.com" }]
license = "BSD-3-Clause"

[project.urls]
repository = "https://github.com/pypdfium2-team/gn-dist"

[project.scripts]
gn = "gn_dist.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gn_dist = ["gn"]


[tool.cibuildwheel]
build-frontend = "build"
test-command = [
    "python {project}/utils/test.py",
    # TODO ...
]

# install ninja

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_*"
before-all = [
    # "dnf clean all && dnf makecache --refresh",
    "dnf -y install ninja-build",
]

# manylinux_armv7l uses a Ubuntu-based image, for lack of an RHEL-based one
[[tool.cibuildwheel.overrides]]
select = "*-manylinux_armv7l"
before-all = [
    "apt-get update",
    "apt-get install -y ninja-build",
]
manylinux-armv7l-image = "ghcr.io/mayeut/manylinux_2_35:latest"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux_*"
before-all = ["apk add ninja-build"]
inherit.environment = "append"
environment.PATH = "/usr/lib/ninja-build/bin:$PATH"

[[tool.cibuildwheel.overrides]]
select = "*-*linux_{ppc64le,riscv64,loongarch64,s390x}"
environment-pass = ["RUNNER_ARCH"]
inherit.before-all = "append"
before-all = [
    "pip install -U sigstore",
    "bash ./utils/install-static-clang.sh",
]
inherit.environment = "append"
environment.BUILD_PARAMS = "-c clang --clang-path /opt/clang"
